# torrent-rs

./: .env.example  .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
configs/: aggregatorZenohConfig.json5  feedZenohConfig.json5  producerZenohConfig.json5
examples/: example.rs
schemas/: message_type.fbs  pricinginfo.fbs
schemas/schema/: orderbook_update.fbs  pricinginfo.fbs  snapshot_event.fbs
src/: aggregator.rs  aggregator_v2.rs  binance.rs  bullish.rs  bybit.rs  coinbase.rs  common.rs  lib.rs  okx.rs  rest.rs  spsc.rs  utils.rs  websocket.rs
src/exchanges/: config.rs  mod.rs  util.rs
src/exchanges/binance/: api.rs  client.rs  config.rs  errors.rs  futures.rs  mod.rs  orderbook.rs  spot.rs  types.rs  utils.rs
src/exchanges/binance/flatbuffer/: event_factory.rs  mod.rs  pricinginfo.rs
src/exchanges/bullish/: mod.rs  orderbook.rs  spot.rs  types.rs  ws.rs
src/exchanges/bybit/: futures.rs  mod.rs  orderbook.rs  spot.rs  types.rs
src/exchanges/bybit/flatbuffer/: event_factory.rs  pricinginfo.rs
src/exchanges/coinbase/: mod.rs  orderbook.rs  spot.rs  types.rs  utils.rs
src/exchanges/gate/: api.rs  client.rs  errors.rs  mod.rs  orderbook.rs  spot.rs  types.rs  utils.rs
src/exchanges/huobi/: mod.rs  spot.rs  types.rs
src/exchanges/kucoin/: api.rs  client.rs  futures.rs  mod.rs  orderbook.rs  spot.rs  types.rs  utils.rs
src/exchanges/kucoin/flatbuffer/: event_factory.rs
src/exchanges/okx/: futures.rs  mod.rs  orderbook.rs  spot.rs  types.rs  utils.rs
src/exchanges/okx/flatbuffer/: event_factory.rs  message.rs  mod.rs  orderbook.rs
src/flatbuffer/: event_factory.rs  message.rs  mod.rs  orderbook.rs  pricing_info.rs  snapshot.rs
src/orderbook/: l2.rs
tests/: aggregator_test.rs  spsc_test.rs
tests/common/: mod.rs
