[package]
name = "async-wss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] } 
tokio-native-tls = "0.3.1"

tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }

url = "2.4.1"

serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.107"

log = "0.4.17"
failure = "0.1.8"