[package]
name = "async-wss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tokio & Futures 
tokio = { version = "1.33.0", features = ["full", "sync"] } 
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }

# HTTP
url = "2.4.1"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }

# Serde
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.107"

# Logging
log = "0.4.17"
pretty_env_logger = "0.5.0"

# Errors
failure = "0.1.8"
error-chain = { version = "0.12.4", default-features = false }

# Static Map
phf = { version = "0.11", features = ["macros"] }

# Misc
regex = "1.4"

flatbuffers = "23.1.21"

zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", features = ["shared-memory"], branch = "master" }

crossbeam-utils = "0.8.16"
